Use List.copyOf